style: fix alignment of billing card

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -15,7 +15,7 @@
 
 .cart-container {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
 
@@ -64,6 +64,7 @@
 
 .cart-price-container .ecomm-billing-card {
   width: 100%;
+  margin-top:3.2rem;
 }
 
 .ecomm-billing-card .billing-card-title {
